scripts/nullaway/annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8.txt
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/ChooseStrategy.java:15: error: [NullAway] assigning @Nullable expression to @NonNull field
	private JTextField threshold = null;
	                   ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/ChooseStrategy.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
	private JTextField stockAmount = null;
	                   ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/ChooseStrategy.java:70: error: [NullAway] dereferenced expression strategy is @Nullable
		return (String)strategy.getSelectedItem();
		                       ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/Mainmenu.java:34: error: [NullAway] @NonNull static field console not initialized
	public static JTextArea console;
	                        ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/Mainmenu.java:36: error: [NullAway] @NonNull static field myDB not initialized
	public static myDatabase myDB;
	                         ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/Mainmenu.java:86: error: [NullAway] dereferenced expression myResult is @Nullable
							myResult.setVisible(true);
							        ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Trading_Engine/myDatabase.java:9: error: [NullAway] @NonNull static field connection not initialized
	private static Connection connection;
	                          ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Trading_Engine/myDatabase.java:88: error: [NullAway] dereferenced expression currentDate is @Nullable
			overviewResult.add(currentDate.toString());
			                              ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Trading_Engine/myDatabase.java:89: error: [NullAway] dereferenced expression startTime is @Nullable
			overviewResult.add(startTime.toString() + " to " + checkLastTime.substring(0, 8));
			                            ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Trading_Engine/myDatabase.java:396: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return set;
		^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/ResultDisplay.java:52: error: [NullAway] initializer method does not guarantee @NonNull fields strategyResult (line 45), completedTrade (line 46), bidFirstList (line 47), askFirstList (line 48), strategyAsk (line 49), strategyBid (line 50) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ResultDisplay(String frametitle, myDatabase db, LinkedList<String> result){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/ResultDisplay.java:40: error: [NullAway] @NonNull static field myDB not initialized
	public static myDatabase myDB; 
	                         ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/LineGraph.java:54: error: [NullAway] dereferenced expression series2 is @Nullable
    	series2.add(d, e);
    	       ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/LineGraph.java:129: error: [NullAway] dereferenced expression series1 is @Nullable
		series1.add(finishTime, tmpPrice);
		       ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/LineGraph.java:133: error: [NullAway] dereferenced expression series3 is @Nullable
		series3.add(finishTime, tmpPrice);
		       ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Selecting_Algothrim/lecMSReverse.java:173: error: [NullAway] dereferenced expression tempCR is @Nullable
				tempCR.setSellList(newReceiptList);
				      ^
    (see http://t.uber.com/nullaway )
../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Selecting_Algothrim/lecMSMomentum.java:173: error: [NullAway] dereferenced expression tempCR is @Nullable
				tempCR.setSellList(newReceiptList);
				      ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../annotator/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/ChooseStrategy.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
17 errors
